--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,4 @@
-api: "/api/v1.0/profile"
+api:
+  profiles: "/api/v1.0/profile"
+  profilePictures: "/api/v1.0/profile/picture"
+  queryProfiles: "/api/v1.0/profile/search"
